feat: add command-line overrides for POM List<String> parameters